--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,12 @@
         android:theme="@style/Theme.ImplicitIntent"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".secondActivity"
 
+            android:parentActivityName=".MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
